# axum-oauth-sample

./: Cargo.toml  Dockerfile  README.md  package-lock.json
public/styles/: app.css
src/misc/: error.rs
src/routes/api/: mod.rs
src/routes/api/auth/: auth_discord.rs  auth_github.rs  auth_google.rs  mod.rs
src/routes/pages/: mod.rs
src/server/: mod.rs
templates/: error.html  index.html  login.html
templates/layouts/: base.html  footer.html  header.html
