[package]
name = "axum-oauth-sample"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = "1.0.98"
askama = { version = "0.14.0" }
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie", "typed-header"] }
chrono = "0.4.31"
cookie = "0.18.0"
dotenvy = "0.15.7"
oauth2 = "5.0.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "runtime-tokio",
    "uuid",
    "chrono",
] }
tokio = { version = "1.34.0", features = ["full"] }
tower = { version = "0.5.2", features = [] }
tower-http = { version = "0.6.6", features = ["trace", "fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
